Colaboratory を使用して作成しました

--- a/mnist_use_keras.ipynb
+++ b/mnist_use_keras.ipynb
@@ -40,10 +40,10 @@
       "metadata": {
         "id": "qnT-5rSX7AVn",
         "colab_type": "code",
-        "outputId": "6b26763c-e55d-484b-b953-64e99ae2fa3b",
+        "outputId": "25c66f51-006b-43b5-f9c3-a746f7c47cae",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1349
+          "height": 1139
         }
       },
       "cell_type": "code",
@@ -103,92 +103,74 @@
         "elapsed_time = time.time() - start\n",
         "print(\"elapsed_time: {0}\".format(elapsed_time))"
       ],
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Downloading data from https://s3.amazonaws.com/img-datasets/mnist.npz\n",
-            "11493376/11490434 [==============================] - 0s 0us/step\n",
             "60000 train samples\n",
             "10000 test samples\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Colocations handled automatically by placer.\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py:3445: calling dropout (from tensorflow.python.ops.nn_ops) with keep_prob is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Please use `rate` instead of `keep_prob`. Rate should be set to `rate = 1 - keep_prob`.\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "dense_1 (Dense)              (None, 512)               401920    \n",
+            "dense_10 (Dense)             (None, 512)               401920    \n",
             "_________________________________________________________________\n",
-            "dropout_1 (Dropout)          (None, 512)               0         \n",
+            "dropout_7 (Dropout)          (None, 512)               0         \n",
             "_________________________________________________________________\n",
-            "dense_2 (Dense)              (None, 512)               262656    \n",
+            "dense_11 (Dense)             (None, 512)               262656    \n",
             "_________________________________________________________________\n",
-            "dropout_2 (Dropout)          (None, 512)               0         \n",
+            "dropout_8 (Dropout)          (None, 512)               0         \n",
             "_________________________________________________________________\n",
-            "dense_3 (Dense)              (None, 10)                5130      \n",
+            "dense_12 (Dense)             (None, 10)                5130      \n",
             "=================================================================\n",
             "Total params: 669,706\n",
             "Trainable params: 669,706\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n",
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use tf.cast instead.\n",
             "Train on 60000 samples, validate on 10000 samples\n",
             "Epoch 1/20\n",
-            "60000/60000 [==============================] - 4s 75us/step - loss: 0.2432 - acc: 0.9253 - val_loss: 0.1108 - val_acc: 0.9661\n",
+            "60000/60000 [==============================] - 2s 38us/step - loss: 0.2477 - acc: 0.9226 - val_loss: 0.1096 - val_acc: 0.9666\n",
             "Epoch 2/20\n",
-            "60000/60000 [==============================] - 2s 28us/step - loss: 0.1032 - acc: 0.9690 - val_loss: 0.0764 - val_acc: 0.9772\n",
+            "60000/60000 [==============================] - 2s 31us/step - loss: 0.1054 - acc: 0.9688 - val_loss: 0.0872 - val_acc: 0.9737\n",
             "Epoch 3/20\n",
-            "60000/60000 [==============================] - 2s 28us/step - loss: 0.0737 - acc: 0.9779 - val_loss: 0.0740 - val_acc: 0.9805\n",
+            "60000/60000 [==============================] - 2s 30us/step - loss: 0.0755 - acc: 0.9767 - val_loss: 0.0875 - val_acc: 0.9757\n",
             "Epoch 4/20\n",
-            "60000/60000 [==============================] - 2s 28us/step - loss: 0.0590 - acc: 0.9824 - val_loss: 0.0799 - val_acc: 0.9797\n",
+            "60000/60000 [==============================] - 2s 30us/step - loss: 0.0627 - acc: 0.9814 - val_loss: 0.0844 - val_acc: 0.9767\n",
             "Epoch 5/20\n",
-            "60000/60000 [==============================] - 2s 27us/step - loss: 0.0509 - acc: 0.9844 - val_loss: 0.0637 - val_acc: 0.9832\n",
+            "60000/60000 [==============================] - 2s 30us/step - loss: 0.0515 - acc: 0.9843 - val_loss: 0.0725 - val_acc: 0.9815\n",
             "Epoch 6/20\n",
-            "60000/60000 [==============================] - 2s 28us/step - loss: 0.0433 - acc: 0.9872 - val_loss: 0.0725 - val_acc: 0.9822\n",
+            "60000/60000 [==============================] - 2s 30us/step - loss: 0.0443 - acc: 0.9866 - val_loss: 0.0846 - val_acc: 0.9786\n",
             "Epoch 7/20\n",
-            "60000/60000 [==============================] - 2s 28us/step - loss: 0.0380 - acc: 0.9884 - val_loss: 0.0734 - val_acc: 0.9819\n",
+            "60000/60000 [==============================] - 2s 30us/step - loss: 0.0382 - acc: 0.9886 - val_loss: 0.0770 - val_acc: 0.9818\n",
             "Epoch 8/20\n",
-            "60000/60000 [==============================] - 2s 28us/step - loss: 0.0342 - acc: 0.9901 - val_loss: 0.0831 - val_acc: 0.9821\n",
+            "60000/60000 [==============================] - 2s 30us/step - loss: 0.0347 - acc: 0.9902 - val_loss: 0.0827 - val_acc: 0.9811\n",
             "Epoch 9/20\n",
-            "60000/60000 [==============================] - 2s 28us/step - loss: 0.0317 - acc: 0.9912 - val_loss: 0.0865 - val_acc: 0.9824\n",
+            "60000/60000 [==============================] - 2s 33us/step - loss: 0.0332 - acc: 0.9905 - val_loss: 0.0875 - val_acc: 0.9820\n",
             "Epoch 10/20\n",
-            "60000/60000 [==============================] - 2s 28us/step - loss: 0.0269 - acc: 0.9920 - val_loss: 0.0904 - val_acc: 0.9809\n",
+            "60000/60000 [==============================] - 2s 34us/step - loss: 0.0304 - acc: 0.9910 - val_loss: 0.0890 - val_acc: 0.9828\n",
             "Epoch 11/20\n",
-            "60000/60000 [==============================] - 2s 28us/step - loss: 0.0268 - acc: 0.9927 - val_loss: 0.0919 - val_acc: 0.9828\n",
+            "60000/60000 [==============================] - 2s 34us/step - loss: 0.0282 - acc: 0.9923 - val_loss: 0.0944 - val_acc: 0.9811\n",
             "Epoch 12/20\n",
-            "60000/60000 [==============================] - 2s 28us/step - loss: 0.0243 - acc: 0.9931 - val_loss: 0.0999 - val_acc: 0.9828\n",
+            "60000/60000 [==============================] - 2s 34us/step - loss: 0.0268 - acc: 0.9931 - val_loss: 0.0976 - val_acc: 0.9828\n",
             "Epoch 13/20\n",
-            "60000/60000 [==============================] - 2s 30us/step - loss: 0.0238 - acc: 0.9928 - val_loss: 0.1038 - val_acc: 0.9835\n",
+            "60000/60000 [==============================] - 2s 34us/step - loss: 0.0245 - acc: 0.9931 - val_loss: 0.1009 - val_acc: 0.9838\n",
             "Epoch 14/20\n",
-            "60000/60000 [==============================] - 2s 31us/step - loss: 0.0256 - acc: 0.9932 - val_loss: 0.0878 - val_acc: 0.9840\n",
+            "60000/60000 [==============================] - 2s 32us/step - loss: 0.0210 - acc: 0.9941 - val_loss: 0.1075 - val_acc: 0.9820\n",
             "Epoch 15/20\n",
-            "60000/60000 [==============================] - 2s 31us/step - loss: 0.0201 - acc: 0.9943 - val_loss: 0.0883 - val_acc: 0.9848\n",
+            "60000/60000 [==============================] - 2s 30us/step - loss: 0.0240 - acc: 0.9940 - val_loss: 0.1140 - val_acc: 0.9805\n",
             "Epoch 16/20\n",
-            "60000/60000 [==============================] - 2s 31us/step - loss: 0.0197 - acc: 0.9946 - val_loss: 0.1032 - val_acc: 0.9835\n",
+            "60000/60000 [==============================] - 2s 30us/step - loss: 0.0227 - acc: 0.9939 - val_loss: 0.0963 - val_acc: 0.9836\n",
             "Epoch 17/20\n",
-            "60000/60000 [==============================] - 2s 31us/step - loss: 0.0178 - acc: 0.9949 - val_loss: 0.1002 - val_acc: 0.9856\n",
+            "60000/60000 [==============================] - 2s 30us/step - loss: 0.0218 - acc: 0.9942 - val_loss: 0.1140 - val_acc: 0.9826\n",
             "Epoch 18/20\n",
-            "60000/60000 [==============================] - 2s 30us/step - loss: 0.0182 - acc: 0.9948 - val_loss: 0.1161 - val_acc: 0.9825\n",
+            "60000/60000 [==============================] - 2s 30us/step - loss: 0.0208 - acc: 0.9951 - val_loss: 0.1072 - val_acc: 0.9846\n",
             "Epoch 19/20\n",
-            "60000/60000 [==============================] - 2s 28us/step - loss: 0.0193 - acc: 0.9952 - val_loss: 0.1144 - val_acc: 0.9832\n",
+            "60000/60000 [==============================] - 2s 30us/step - loss: 0.0210 - acc: 0.9947 - val_loss: 0.1116 - val_acc: 0.9838\n",
             "Epoch 20/20\n",
-            "60000/60000 [==============================] - 2s 28us/step - loss: 0.0188 - acc: 0.9955 - val_loss: 0.1088 - val_acc: 0.9833\n",
-            "Test loss: 0.10880493171306163\n",
-            "Test accuracy: 0.9833\n",
-            "elapsed_time: 37.9570255279541\n"
+            "60000/60000 [==============================] - 2s 30us/step - loss: 0.0188 - acc: 0.9949 - val_loss: 0.1261 - val_acc: 0.9819\n",
+            "Test loss: 0.12605107986313116\n",
+            "Test accuracy: 0.9819\n",
+            "elapsed_time: 38.52144503593445\n"
           ],
           "name": "stdout"
         }
@@ -198,7 +180,7 @@
       "metadata": {
         "id": "REwQzU_s8ai2",
         "colab_type": "code",
-        "outputId": "a083fde3-7991-4499-81b2-3962a43878b6",
+        "outputId": "f0bc89d7-664e-4ddd-e905-0e9f4891437e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 326
@@ -218,7 +200,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -238,7 +220,7 @@
       "metadata": {
         "id": "LaStEX7H9xHm",
         "colab_type": "code",
-        "outputId": "b5bac972-53c2-4143-fbbc-7b4fa9785432",
+        "outputId": "143ed4b3-2d80-4537-a432-cd278889f8aa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -260,17 +242,61 @@
         "\n",
         "print(\"elapsed_time: {0}\".format(elapsed_time))"
       ],
-      "execution_count": 2,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[7 2 1 0 4 1 4 9 5 9 0 6 9 0 1 5]\n",
-            "elapsed_time: 0.03293943405151367\n"
+            "elapsed_time: 0.06528019905090332\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "_5oQTTecd2uX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 124
+        },
+        "outputId": "d0ac764c-e3d9-43aa-a12d-5028f3b6789c"
+      },
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount(\"/content/drive\")"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "a54Lhb_4eF39",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "open('drive/My Drive/ml_data/model.json', 'w').write(model.to_json())\n",
+        "model.save_weights('drive/My Drive/ml_data/model.h5')"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
