Colaboratory を使用して作成しました

--- a/time_series_3.ipynb
+++ b/time_series_3.ipynb
@@ -32,7 +32,21 @@
       },
       "cell_type": "markdown",
       "source": [
-        "- Pythonで正規化・標準化（リスト、NumPy配列、pandas.DataFrame） | note.nkmk.me https://note.nkmk.me/python-list-ndarray-dataframe-normalize-standardize/"
+        "- Pythonで正規化・標準化（リスト、NumPy配列、pandas.DataFrame） | note.nkmk.me https://note.nkmk.me/python-list-ndarray-dataframe-normalize-standardize/\n",
+        "- Kerasを用いたディープラーニング（LSTM）による株価予測 - Deep Insider https://deepinsider.jp/issue/deeplearningnext/stockprediction\n",
+        "- Keras LSTMでトレンド予測をしてみる | cedro-blog http://cedro3.com/ai/keras-lstm/\n",
+        "- KerasでDeep Learning：LSTMで日経平均株価を予測してみる - データサイエンティスト(仮) http://tekenuko.hatenablog.com/entry/2017/07/25/005348\n",
+        "- Keras の LSTM で時系列の予測がしたい - クッキーの日記 http://cookie-box.hatenablog.com/entry/2017/04/09/093654\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "CgsAb43rtvQ-",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        ""
       ]
     },
     {
@@ -68,7 +82,7 @@
         "df.info()\n",
         "df.head()"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -235,7 +249,7 @@
         "df_1301.info()\n",
         "df_1301\n"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -937,7 +951,7 @@
       "source": [
         "df_1301.plot()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -985,7 +999,7 @@
         "\n",
         "df_1301"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1734,7 +1748,7 @@
       "source": [
         "df_1301[\"scaled_adjustment_value\"].plot()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1827,7 +1841,7 @@
         "                    validation_split=0.2,\n",
         "                    callbacks=[EarlyStopping()])"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1867,7 +1881,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1887,11 +1901,11 @@
       "metadata": {
         "id": "tHVIHlTBC3BY",
         "colab_type": "code",
+        "outputId": "dec6272d-1201-43ec-c12b-563dfb97e99a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 19127
-        },
-        "outputId": "dec6272d-1201-43ec-c12b-563dfb97e99a"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -1907,7 +1921,7 @@
         "\n",
         "future_result"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -3024,11 +3038,11 @@
       "metadata": {
         "id": "wpGiO4e5Gc1K",
         "colab_type": "code",
+        "outputId": "b74dc583-e1bd-4821-9417-d6f9fe99b3fc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
-        },
-        "outputId": "b74dc583-e1bd-4821-9417-d6f9fe99b3fc"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -3044,7 +3058,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3064,11 +3078,11 @@
       "metadata": {
         "id": "KPzbT1z6LFBG",
         "colab_type": "code",
+        "outputId": "10f55cd9-2771-4802-ecca-a67b6d770fa2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
-        },
-        "outputId": "10f55cd9-2771-4802-ecca-a67b6d770fa2"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -3087,7 +3101,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 34,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
