Colaboratory を使用して作成しました

--- a/predict_horse_racing.1.ipynb
+++ b/predict_horse_racing.1.ipynb
@@ -3786,6 +3786,48 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KsDXCWvB8fGz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import sklearn.preprocessing as sp\n",
+        "import numpy as np\n",
+        "\n",
+        "df_input_3 = pd.concat([df.drop([\"course_length\"], axis=1), df_course_length], axis=1)\n",
+        "df_input_3 = pd.concat([df_input_3.drop([\"weather\"], axis=1), df_weather], axis=1)\n",
+        "df_input_3 = pd.concat([df_input_3.drop([\"course_condition\"], axis=1), df_course_condition], axis=1)\n",
+        "#df_input_3 = pd.concat([df_input_3.drop([\"race_class\"], axis=1), df_race_class], axis=1)\n",
+        "df_input_3 = df_input_3.drop([\"race_class\"], axis=1)\n",
+        "#df_input_3 = pd.concat([df_input_3.drop([\"prize_class\"], axis=1), df_prize_class], axis=1)\n",
+        "df_input_3 = df_input_3.drop([\"prize_class\"], axis=1)\n",
+        "df_input_3 = pd.concat([df_input_3.drop([\"gender\"], axis=1), df_gender], axis=1)\n",
+        "df_input_3 = pd.concat([df_input_3.drop([\"age\"], axis=1), df_age], axis=1)\n",
+        "df_input_3 = pd.concat([df_input_3.drop([\"coat_color\"], axis=1), df_coat_color], axis=1)\n",
+        "#df_input_3 = pd.concat([df_input_3.drop([\"trainer_id\"], axis=1), df_trainer_id], axis=1)\n",
+        "df_input_3 = df_input_3.drop([\"trainer_id\"], axis=1)\n",
+        "#df_input_3 = pd.concat([df_input_3.drop([\"jockey_id\"], axis=1), df_jockey_id], axis=1)\n",
+        "df_input_3 = df_input_3.drop([\"jockey_id\"], axis=1)\n",
+        "\n",
+        "df_input_3[\"horse_weight\"] = sp.minmax_scale(df_input_3[\"horse_weight\"])\n",
+        "df_input_3[\"jockey_weight\"] = sp.minmax_scale(df_input_3[\"jockey_weight\"])\n",
+        "\n",
+        "#df_input_2[\"rank\"] = sp.minmax_scale(df_input_2[\"rank\"])\n",
+        "rank_3 = []\n",
+        "for index, row in df_input_2.iterrows():\n",
+        "  rank_3.append(1 if row[\"rank\"] <= 3.0 else 0)\n",
+        "df_input_2[\"rank_3\"] = rank_3\n",
+        "df_input_2 = df_input_2.drop([\"rank\"], axis=1)\n",
+        "\n",
+        "df_input_2.info()\n",
+        "df_input_2"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
