Colaboratory を使用して作成しました

--- a/predict_horse_racing.4.ipynb
+++ b/predict_horse_racing.4.ipynb
@@ -44,11 +44,11 @@
       "metadata": {
         "id": "SKzJ7jXZU8kB",
         "colab_type": "code",
+        "outputId": "4b8e25d5-95b6-457d-9857-2512e1d0dfad",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 848
-        },
-        "outputId": "1889c8df-3529-4da7-b10d-c2119f3fa419"
+          "height": 863
+        }
       },
       "source": [
         "import pandas as pd\n",
@@ -311,11 +311,11 @@
       "metadata": {
         "id": "WEjSh2FXU-xE",
         "colab_type": "code",
+        "outputId": "160a8038-92f3-426d-b363-131af1bec481",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1309
-        },
-        "outputId": "36c68969-a72f-40ce-eafc-1e2d6f2f58c8"
+          "height": 1347
+        }
       },
       "source": [
         "df_subset = df_all[[\"course_length\",\n",
@@ -443,11 +443,11 @@
       "metadata": {
         "id": "TDRqTJUgVAyl",
         "colab_type": "code",
+        "outputId": "ccd6ad02-b8f1-46d1-e808-2b43033fa7b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 309
-        },
-        "outputId": "4aaea145-7ef8-4621-be5b-4ada09abca9b"
+          "height": 289
+        }
       },
       "source": [
         "df.head()"
@@ -628,11 +628,11 @@
       "metadata": {
         "id": "ks2AbcMOVEw3",
         "colab_type": "code",
+        "outputId": "0d8e919b-64bd-4058-f773-eaf114d583f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 2142
-        },
-        "outputId": "4327e77f-65db-4074-d5d6-8f695e0c7ca9"
+          "height": 2125
+        }
       },
       "source": [
         "import sklearn.preprocessing as sp\n",
@@ -2416,11 +2416,11 @@
       "metadata": {
         "id": "8ilDAd6aVIoN",
         "colab_type": "code",
+        "outputId": "77e2f165-7b1f-4a78-ce7b-02a51306c739",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 287
-        },
-        "outputId": "1809c52a-eca4-4e35-b794-24abd88c5ee5"
+          "height": 267
+        }
       },
       "source": [
         "x.head()"
@@ -2635,11 +2635,11 @@
       "metadata": {
         "id": "X2S_KEkcVKSo",
         "colab_type": "code",
+        "outputId": "4cd14ab2-77e8-40f4-c958-871ccd257603",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 119
-        },
-        "outputId": "e98fd2e7-632a-420b-e5b2-176ef9737737"
+          "height": 122
+        }
       },
       "source": [
         "y.head()"
@@ -2670,11 +2670,11 @@
       "metadata": {
         "id": "6jTfzTREVMBK",
         "colab_type": "code",
+        "outputId": "4118c6ed-e499-4141-94fb-ede24e31a865",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 85
-        },
-        "outputId": "6993bbde-a6ab-458a-f431-9209a3380d32"
+          "height": 87
+        }
       },
       "source": [
         "import sklearn.model_selection as sm\n",
@@ -2705,11 +2705,11 @@
       "metadata": {
         "id": "RmWDwGGoVSnX",
         "colab_type": "code",
+        "outputId": "48106735-3dcd-4cae-936e-996702b81bf7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 173
-        },
-        "outputId": "90390367-5d23-4dbd-c5de-2d01849583fc"
+          "height": 177
+        }
       },
       "source": [
         "from sklearn.ensemble import RandomForestClassifier\n",
@@ -2717,7 +2717,7 @@
         "clf = RandomForestClassifier(max_depth=4, random_state=0)\n",
         "clf.fit(x_train, y_train)"
       ],
-      "execution_count": 39,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -2742,7 +2742,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 39
+          "execution_count": 16
         }
       ]
     },
@@ -2751,23 +2751,85 @@
       "metadata": {
         "id": "BYhAt6rCXrns",
         "colab_type": "code",
+        "outputId": "be1eda79-bb63-41b7-8816-80d7b7e466de",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
-        },
-        "outputId": "a3854173-64d8-435e-9fcb-1ecd311314ff"
+          "height": 52
+        }
       },
       "source": [
         "print(\"train score: {0}\".format(clf.score(x_train, y_train)))\n",
         "print(\"test score: {0}\".format(clf.score(x_test, y_test)))"
       ],
-      "execution_count": 40,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "train score: 0.08288651013336946\n",
-            "test score: 0.07785219310131238\n"
+            "train score: 0.08317686455933877\n",
+            "test score: 0.079903991328249\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rZVqU7kbDopB",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "outputId": "0dc7845d-1465-484d-deb5-7f85405b8a14"
+      },
+      "source": [
+        "from sklearn.linear_model import Lasso\n",
+        "\n",
+        "clf = Lasso()\n",
+        "clf.fit(x_train, y_train)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Lasso(alpha=1.0, copy_X=True, fit_intercept=True, max_iter=1000,\n",
+              "   normalize=False, positive=False, precompute=False, random_state=None,\n",
+              "   selection='cyclic', tol=0.0001, warm_start=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "70dgrlCGDvtV",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "b2219241-84c2-4e2d-d51d-770cf3c0b4eb"
+      },
+      "source": [
+        "print(\"train score: {0}\".format(clf.score(x_train, y_train)))\n",
+        "print(\"test score: {0}\".format(clf.score(x_test, y_test)))"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "train score: 0.0\n",
+            "test score: -2.3074802419920104e-06\n"
           ],
           "name": "stdout"
         }
