Colaboratory を使用して作成しました

--- a/predict_horse_racing.4.ipynb
+++ b/predict_horse_racing.4.ipynb
@@ -446,7 +446,7 @@
         "outputId": "ccd6ad02-b8f1-46d1-e808-2b43033fa7b6",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 289
+          "height": 309
         }
       },
       "source": [
@@ -628,10 +628,10 @@
       "metadata": {
         "id": "ks2AbcMOVEw3",
         "colab_type": "code",
-        "outputId": "0d8e919b-64bd-4058-f773-eaf114d583f8",
+        "outputId": "48b36afe-cb13-41a2-8f68-ea324f79de0d",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 2125
+          "height": 2162
         }
       },
       "source": [
@@ -657,11 +657,12 @@
         "df_input[\"jockey_weight\"] = sp.minmax_scale(df_input[\"jockey_weight\"])\n",
         "\n",
         "df_input[\"rank\"] = df_input[\"rank\"].astype(np.int64)\n",
+        "#df_input[\"rank\"] = sp.minmax_scale(df_input[\"rank\"])\n",
         "\n",
         "df_input.info()\n",
         "df_input"
       ],
-      "execution_count": 6,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -2393,7 +2394,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 28
         }
       ]
     },
@@ -2416,16 +2417,16 @@
       "metadata": {
         "id": "8ilDAd6aVIoN",
         "colab_type": "code",
-        "outputId": "77e2f165-7b1f-4a78-ce7b-02a51306c739",
+        "outputId": "1cb65849-5813-4220-c480-fc843fe4da3c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 267
+          "height": 304
         }
       },
       "source": [
         "x.head()"
       ],
-      "execution_count": 8,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2626,7 +2627,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 30
         }
       ]
     },
@@ -2635,7 +2636,7 @@
       "metadata": {
         "id": "X2S_KEkcVKSo",
         "colab_type": "code",
-        "outputId": "4cd14ab2-77e8-40f4-c958-871ccd257603",
+        "outputId": "15b2e7f0-4af0-4131-89e8-1e323739cf79",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
@@ -2644,7 +2645,7 @@
       "source": [
         "y.head()"
       ],
-      "execution_count": 9,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2661,7 +2662,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 31
         }
       ]
     },
@@ -2670,7 +2671,7 @@
       "metadata": {
         "id": "6jTfzTREVMBK",
         "colab_type": "code",
-        "outputId": "4118c6ed-e499-4141-94fb-ede24e31a865",
+        "outputId": "a1af0656-2069-4e43-f80e-bbe7b553cea1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
@@ -2686,7 +2687,7 @@
         "print(\"y_train.shape: {0}\".format(y_train.shape))\n",
         "print(\"y_test.shape: {0}\".format(y_test.shape))"
       ],
-      "execution_count": 10,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -2705,7 +2706,7 @@
       "metadata": {
         "id": "RmWDwGGoVSnX",
         "colab_type": "code",
-        "outputId": "48106735-3dcd-4cae-936e-996702b81bf7",
+        "outputId": "457ea01f-1d8d-4efe-989f-ccbc76e42eb8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 177
@@ -2717,7 +2718,7 @@
         "clf = RandomForestClassifier(max_depth=4, random_state=0)\n",
         "clf.fit(x_train, y_train)"
       ],
-      "execution_count": 16,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -2742,7 +2743,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 33
         }
       ]
     },
@@ -2751,7 +2752,7 @@
       "metadata": {
         "id": "BYhAt6rCXrns",
         "colab_type": "code",
-        "outputId": "be1eda79-bb63-41b7-8816-80d7b7e466de",
+        "outputId": "3e16dea7-7297-4c19-aa93-085a423af7d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
@@ -2761,13 +2762,13 @@
         "print(\"train score: {0}\".format(clf.score(x_train, y_train)))\n",
         "print(\"test score: {0}\".format(clf.score(x_test, y_test)))"
       ],
-      "execution_count": 17,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "train score: 0.08317686455933877\n",
-            "test score: 0.079903991328249\n"
+            "train score: 0.08207997006123252\n",
+            "test score: 0.07903294491115327\n"
           ],
           "name": "stdout"
         }
@@ -2782,7 +2783,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 69
         },
-        "outputId": "0dc7845d-1465-484d-deb5-7f85405b8a14"
+        "outputId": "a5fd9ca8-5c5a-472a-fda3-2c5b9d075a80"
       },
       "source": [
         "from sklearn.linear_model import Lasso\n",
@@ -2790,7 +2791,7 @@
         "clf = Lasso()\n",
         "clf.fit(x_train, y_train)"
       ],
-      "execution_count": 14,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2804,7 +2805,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 26
         }
       ]
     },
@@ -2817,19 +2818,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 52
         },
-        "outputId": "b2219241-84c2-4e2d-d51d-770cf3c0b4eb"
+        "outputId": "d839f155-cc64-43b3-d920-34265f667e43"
       },
       "source": [
         "print(\"train score: {0}\".format(clf.score(x_train, y_train)))\n",
         "print(\"test score: {0}\".format(clf.score(x_test, y_test)))"
       ],
-      "execution_count": 15,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "train score: 0.0\n",
-            "test score: -2.3074802419920104e-06\n"
+            "test score: -0.00010020247232134238\n"
           ],
           "name": "stdout"
         }
